--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
 * {
     box-sizing: border-box;
 }
+body{
+    background-color: #F2EBE9;
+}
+/*CSS vaule for middleContainer postion and style*/
+button{
+    background-color: #277BC0;
+    color: white;
+}
