updated the error handling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,9 @@ button {
    
 }
 
-.errorMessage{
+.errorMessage, #locationError
+#radiusError,
+#selectingDateError{
     font: italic;
     color: red;
     visibility: hidden;
