--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,16 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif
 }
+
 body{
-    background-color: #F2EBE9;
+    background-color: #FBF2CF;
 }
 
 .homepage-header {
     padding: 30px;
     text-shadow: 2px 2px darkgrey;
-    border: 2px solid green;
+    font-size: 2.5em;
+    color: aqua;
     text-align: center;
 }
 
@@ -80,23 +82,18 @@ button {
     visibility: hidden;
 }
 
-#results{
-    visibility: hidden;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 
-    float: center;
-
-}
 
 .pageSections{
-    position: absolute;
+    position:fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     float: center;
+    flex-wrap: wrap;
+    margin-top: 80px;
+    margin-bottom: 80px;
+
 }
 #homePage{
     visibility: visible;
