full redo of index.html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ button {
 
 
 .pageSections{
-    position:fixed;
+    position:absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
