updated styling on calendar input

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,3 +103,23 @@ button {
 #destination-page, #destinationpage,#weatherpage,#resultpage{
     visibility: hidden;
 }
+
+.modal-content {
+    width: 60%;
+}
+
+.calendar-input {
+    width: 50%;
+    margin: auto;
+    margin-bottom: 5px;
+}
+
+.button.is-primary {
+    width: 30%;
+    margin: auto;
+    margin-bottom: 5px;
+}
+
+.modal.content.h4 {
+    margin-top: 5px;
+}
