--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ button {
     color: red;
     visibility: hidden;
 }
- #locationError
+ #locationError,
 #radiusError,
 #selectingDateError, #nameinputError{
     font: italic;
